--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
